--- a/33-libraries-exercise/package.json
+++ b/33-libraries-exercise/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "concat": "^1.0.3",
     "husky": "^4.2.3",
-    "jest": "^25.1.0"
+    "jest": "^25.2.4"
+  },
+  "dependencies": {
+    "chalk": "^3.0.0"
   }
 }
