--- a/33-libraries-exercise/package.json
+++ b/33-libraries-exercise/package.json
@@ -22,6 +22,7 @@
     "jest": "^25.2.4"
   },
   "dependencies": {
-    "chalk": "^3.0.0"
+    "chalk": "^3.0.0",
+    "readline-sync": "^1.4.10"
   }
 }
